@@ -7,10 +7,14 @@ import com.newnormallist.newsservice.news.repository.NewsRepository;
 import com.newnormallist.newsservice.news.repository.RelatedNewsRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.time.LocalTime;
+import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -24,244 +28,265 @@ public class RelatedNewsServiceImpl implements RelatedNewsService {
     private final NewsRepository newsRepository;
     private final RelatedNewsRepository relatedNewsRepository;
     private static final int MAX_RELATED_NEWS = 4;
+    // DB의 날짜 형식(yyyy-MM-dd HH:mm:ss)과 일치하는 포매터
+    private static final DateTimeFormatter DB_DATETIME_FORMATTER = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
 
     @Override
     public List<RelatedNewsResponseDto> getRelatedNews(Long newsId) {
-        // 1. 뉴스 조회
+        log.info("=== 연관 뉴스 조회 시작: newsId = {} ===", newsId);
+
         News news = newsRepository.findById(newsId)
                 .orElseThrow(() -> new NewsNotFoundException("뉴스를 찾을 수 없습니다: " + newsId));
 
-        List<News> relatedNewsList = new ArrayList<>();
+        log.info("뉴스 정보: newsId={}, oidAid={}, dedupState={}, title={}",
+                news.getNewsId(), news.getOidAid(), news.getDedupState(), news.getTitle());
 
-        // 2. dedup_state에 따른 연관뉴스 조회 로직
-        switch (news.getDedupState()) {
-            case REPRESENTATIVE:
-                relatedNewsList = getRelatedNewsForRepresentative(news);
-                break;
-            case KEPT:
-                relatedNewsList = getRelatedNewsForKept(news);
-                break;
-            case RELATED:
-                relatedNewsList = getRelatedNewsForRelated(news);
-                break;
-        }
+        List<News> relatedNewsList = switch (news.getDedupState()) {
+            case REPRESENTATIVE -> {
+                log.info("REPRESENTATIVE 뉴스 처리 시작");
+                yield getRelatedNewsForRepresentative(news);
+            }
+            case RELATED -> {
+                log.info("RELATED 뉴스 처리 시작");
+                yield getRelatedNewsForRelated(news);
+            }
+            default -> {
+                log.info("KEPT 또는 알 수 없는 상태의 뉴스 처리 시작");
+                yield getRelatedNewsForKept(news);
+            }
+        };
 
-        // 3. DTO 변환 및 반환
+        log.info("=== 연관 뉴스 조회 완료: newsId={}, 결과 개수={} ===", newsId, relatedNewsList.size());
+
         return relatedNewsList.stream()
                 .map(RelatedNewsResponseDto::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
      * REPRESENTATIVE 상태의 뉴스에 대한 연관뉴스 조회
      */
     private List<News> getRelatedNewsForRepresentative(News news) {
-        List<News> relatedNewsList = new ArrayList<>();
+        log.info("REPRESENTATIVE 처리: oidAid = {}", news.getOidAid());
 
-        // 1. related_news 테이블에서 rep_oid_aid가 해당 뉴스의 oid_aid인 related_oid_aid들 조회
+        // 대표 기사와 동일한 oidAid를 가진 모든 기사(클러스터)를 조회
+        List<News> clusterNews = new ArrayList<>(newsRepository.findByOidAid(news.getOidAid()));
+
+        // related_news 테이블에서 연관된 oidAid 목록을 조회
         List<String> relatedOidAids = relatedNewsRepository.findRelatedOidAidsByRepOidAid(news.getOidAid());
-        
+        log.info("related_news 테이블에서 조회한 related_oid_aids: {}", relatedOidAids);
+
         if (!relatedOidAids.isEmpty()) {
-            // 2. 해당 related_oid_aid를 가진 뉴스들 조회
-            List<News> relatedNews = newsRepository.findByOidAidIn(relatedOidAids);
-            
-            // 3. 4개 이상이면 랜덤으로 4개 선택
-            if (relatedNews.size() >= MAX_RELATED_NEWS) {
-                Collections.shuffle(relatedNews);
-                relatedNewsList = relatedNews.subList(0, MAX_RELATED_NEWS);
-            } else {
-                relatedNewsList.addAll(relatedNews);
-            }
+            clusterNews.addAll(newsRepository.findByOidAidIn(relatedOidAids));
         }
 
-        // 4. 4개 미만이면 같은 시간대, 같은 카테고리 뉴스로 채우기
+        // 조회된 뉴스 목록에서 중복을 제거하고, 자기 자신을 제외
+        List<News> relatedNewsList = clusterNews.stream()
+                .distinct()
+                .filter(n -> !n.getNewsId().equals(news.getNewsId()))
+                .collect(Collectors.toCollection(ArrayList::new));
+
+        log.info("클러스터에서 찾은 연관 뉴스 개수: {}", relatedNewsList.size());
+
+        // 부족한 뉴스는 Fallback 로직으로 채웁니다.
         if (relatedNewsList.size() < MAX_RELATED_NEWS) {
-            int remainingCount = MAX_RELATED_NEWS - relatedNewsList.size();
-            List<News> additionalNews = getNewsBySameTimeAndCategory(news, relatedNewsList, remainingCount);
-            relatedNewsList.addAll(additionalNews);
-        }
-        
-        // 5. 여전히 4개 미만이면 최근 3일간 같은 카테고리 뉴스로 채우기
-        if (relatedNewsList.size() < MAX_RELATED_NEWS) {
-            int remainingCount = MAX_RELATED_NEWS - relatedNewsList.size();
-            List<News> recentNews = getRecentNewsByCategory(news, relatedNewsList, remainingCount);
-            relatedNewsList.addAll(recentNews);
+            findFallbackNews(relatedNewsList, news);
         }
 
-        return relatedNewsList;
-    }
+        // 결과를 반환하기 전에 목록을 무작위로 섞습니다.
+        Collections.shuffle(relatedNewsList);
 
-    /**
-     * KEPT 상태의 뉴스에 대한 연관뉴스 조회
-     */
-    private List<News> getRelatedNewsForKept(News news) {
-        List<News> relatedNewsList = new ArrayList<>();
-        
-        // 같은 published_at, 같은 category_name인 뉴스를 랜덤으로 4개 조회 (해당 뉴스 제외)
-        List<News> sameTimeCategoryNews = newsRepository.findByPublishedAtAndCategoryNameAndNewsIdNot(
-                news.getPublishedAt(), news.getCategoryName(), news.getNewsId());
-
-        if (sameTimeCategoryNews.size() >= MAX_RELATED_NEWS) {
-            Collections.shuffle(sameTimeCategoryNews);
-            relatedNewsList = sameTimeCategoryNews.subList(0, MAX_RELATED_NEWS);
-        } else {
-            relatedNewsList.addAll(sameTimeCategoryNews);
-        }
-        
-        // 4개 미만이면 최근 3일간 같은 카테고리 뉴스로 채우기
-        if (relatedNewsList.size() < MAX_RELATED_NEWS) {
-            int remainingCount = MAX_RELATED_NEWS - relatedNewsList.size();
-            List<News> recentNews = getRecentNewsByCategory(news, relatedNewsList, remainingCount);
-            relatedNewsList.addAll(recentNews);
-        }
-        
-        return relatedNewsList;
+        // 최종적으로 중복을 한번 더 제거하고 개수를 제한하여 반환
+        return relatedNewsList.stream().distinct().limit(MAX_RELATED_NEWS).toList();
     }
 
     /**
      * RELATED 상태의 뉴스에 대한 연관뉴스 조회
      */
     private List<News> getRelatedNewsForRelated(News news) {
+        log.info("RELATED 처리: oidAid = {}", news.getOidAid());
         List<News> relatedNewsList = new ArrayList<>();
 
-        // 1. 해당 뉴스의 oid_aid가 related_oid_aid인 행의 rep_oid_aid 조회
+        // 현재 뉴스의 대표 oidAid를 찾음
         String repOidAid = relatedNewsRepository.findRepOidAidByRelatedOidAid(news.getOidAid());
-        
+        log.info("RELATED: 찾은 rep_oid_aid = {}", repOidAid);
+
         if (repOidAid != null) {
-            // 2. rep_oid_aid를 oid_aid로 가지는 뉴스와 연관관계인 뉴스들 조회
-            List<String> relatedOidAids = relatedNewsRepository.findRelatedOidAidsByRepOidAid(repOidAid);
-            
-            if (!relatedOidAids.isEmpty()) {
-                // 3. 해당 related_oid_aid를 가진 뉴스들 조회 (현재 뉴스 제외)
-                List<News> relatedNews = newsRepository.findByOidAidInAndNewsIdNot(relatedOidAids, news.getNewsId());
-                
-                if (relatedNews.size() >= MAX_RELATED_NEWS) {
-                    Collections.shuffle(relatedNews);
-                    relatedNewsList = relatedNews.subList(0, MAX_RELATED_NEWS);
-                } else {
-                    relatedNewsList.addAll(relatedNews);
-                }
+            // 대표 oidAid로 클러스터의 모든 뉴스를 조회
+            List<News> clusterNews = new ArrayList<>(newsRepository.findByOidAid(repOidAid));
+
+            List<String> allRelatedOidAids = relatedNewsRepository.findRelatedOidAidsByRepOidAid(repOidAid);
+            log.info("RELATED: rep_oid_aid로 찾은 related_oid_aids: {}", allRelatedOidAids);
+
+            if (!allRelatedOidAids.isEmpty()) {
+                clusterNews.addAll(newsRepository.findByOidAidIn(allRelatedOidAids));
             }
+
+            // 조회된 뉴스 목록에서 중복을 제거하고, 자기 자신을 제외
+            relatedNewsList = clusterNews.stream()
+                    .distinct()
+                    .filter(n -> !n.getNewsId().equals(news.getNewsId()))
+                    .collect(Collectors.toCollection(ArrayList::new));
+
+            log.info("클러스터에서 찾은 전체 연관 뉴스 개수: {}", relatedNewsList.size());
+
+        } else {
+            log.info("RELATED: 해당 oid_aid가 related_oid_aid로 등록되지 않음");
         }
 
-        // 4. 4개 미만이면 같은 시간대, 같은 카테고리 뉴스로 채우기
+        // 부족한 뉴스는 Fallback 로직으로 채웁니다.
         if (relatedNewsList.size() < MAX_RELATED_NEWS) {
-            int remainingCount = MAX_RELATED_NEWS - relatedNewsList.size();
-            List<News> additionalNews = getNewsBySameTimeAndCategory(news, relatedNewsList, remainingCount);
-            relatedNewsList.addAll(additionalNews);
-        }
-        
-        // 5. 여전히 4개 미만이면 최근 3일간 같은 카테고리 뉴스로 채우기
-        if (relatedNewsList.size() < MAX_RELATED_NEWS) {
-            int remainingCount = MAX_RELATED_NEWS - relatedNewsList.size();
-            List<News> recentNews = getRecentNewsByCategory(news, relatedNewsList, remainingCount);
-            relatedNewsList.addAll(recentNews);
+            findFallbackNews(relatedNewsList, news);
         }
 
-        return relatedNewsList;
+        // 결과를 반환하기 전에 목록을 무작위로 섞습니다.
+        Collections.shuffle(relatedNewsList);
+
+        // 최종적으로 중복을 한번 더 제거하고 개수를 제한하여 반환
+        return relatedNewsList.stream().distinct().limit(MAX_RELATED_NEWS).toList();
+    }
+
+    /**
+     * KEPT 상태의 뉴스에 대한 연관뉴스 조회 (Fallback 로직만 사용)
+     */
+    private List<News> getRelatedNewsForKept(News news) {
+        log.info("KEPT 처리: oidAid = {}", news.getOidAid());
+        List<News> relatedNewsList = new ArrayList<>();
+
+        // KEPT 상태는 명시적 연관 관계가 없으므로, 바로 Fallback 로직으로 유사 뉴스를 찾습니다.
+        findFallbackNews(relatedNewsList, news);
+
+        // 결과를 반환하기 전에 목록을 무작위로 섞습니다.
+        Collections.shuffle(relatedNewsList);
+
+        return relatedNewsList.stream().distinct().limit(MAX_RELATED_NEWS).toList();
+    }
+
+    /**
+     * 관련 뉴스를 찾지 못했을 경우, 다른 방법으로 뉴스를 채우는 Fallback 로직
+     *
+     * @param newsList      현재까지 찾은 뉴스 리스트 (이 리스트에 뉴스가 추가됨)
+     * @param referenceNews 기준이 되는 원본 뉴스
+     */
+    private void findFallbackNews(List<News> newsList, News referenceNews) {
+        if (newsList.size() < MAX_RELATED_NEWS) {
+            log.info("Fallback: 부족한 뉴스를 다른 방법으로 채움. 현재: {}, 필요: {}",
+                    newsList.size(), MAX_RELATED_NEWS - newsList.size());
+        }
+
+        // 1. 같은 시간대, 같은 카테고리 뉴스로 채우기
+        if (newsList.size() < MAX_RELATED_NEWS) {
+            int needed = MAX_RELATED_NEWS - newsList.size();
+            newsList.addAll(getNewsBySameTimeAndCategory(referenceNews, newsList, needed));
+        }
+
+        // 2. 최근 3일간 같은 카테고리 뉴스로 채우기
+        if (newsList.size() < MAX_RELATED_NEWS) {
+            int needed = MAX_RELATED_NEWS - newsList.size();
+            newsList.addAll(getRecentNewsByCategory(referenceNews, newsList, needed));
+        }
+
+        // 3. 날짜 상관없이 같은 카테고리 뉴스로 채우기
+        if (newsList.size() < MAX_RELATED_NEWS) {
+            int needed = MAX_RELATED_NEWS - newsList.size();
+            newsList.addAll(getAnyNewsByCategory(referenceNews, newsList, needed));
+        }
     }
 
     /**
      * 같은 시간대와 카테고리의 뉴스를 조회하여 추가
      */
     private List<News> getNewsBySameTimeAndCategory(News news, List<News> excludeNews, int count) {
-        // 이미 선택된 뉴스들의 ID 목록
-        List<Long> excludeNewsIds = excludeNews.stream()
-                .map(News::getNewsId)
-                .collect(Collectors.toList());
-        excludeNewsIds.add(news.getNewsId()); // 현재 뉴스도 제외
+        List<Long> excludeNewsIds = new ArrayList<>(excludeNews.stream().map(News::getNewsId).toList());
+        excludeNewsIds.add(news.getNewsId());
 
         try {
-            // 같은 날짜, 같은 카테고리, 같은 시간대(오전/오후)인 뉴스 조회
             LocalDateTime newsDateTime = parsePublishedAt(news.getPublishedAt());
-            LocalDateTime startOfDay = newsDateTime.toLocalDate().atStartOfDay();
-            LocalDateTime endOfDay = startOfDay.plusDays(1);
-            
-            List<News> sameDayCategoryNews = newsRepository.findByPublishedAtBetweenAndCategoryNameAndNewsIdNotIn(
-                    startOfDay.toString(), endOfDay.toString(), news.getCategoryName(), excludeNewsIds);
+            LocalDateTime startOfDay = newsDateTime.toLocalDate().atStartOfDay(); // yyyy-MM-dd 00:00:00
+            LocalDateTime endOfDay = newsDateTime.toLocalDate().atTime(LocalTime.MAX); // yyyy-MM-dd 23:59:59.999...
+
+            List<News> sameDayCategoryNews = newsRepository.findByCategoryNameAndPublishedAtBetweenAndNewsIdNotIn(
+                    news.getCategoryName(),
+                    startOfDay.format(DB_DATETIME_FORMATTER),
+                    endOfDay.format(DB_DATETIME_FORMATTER),
+                    excludeNewsIds);
 
             // 오전/오후 시간대 필터링
-            LocalTime newsTime = newsDateTime.toLocalTime();
-            boolean isMorning = newsTime.isBefore(LocalTime.NOON);
-            
-            List<News> filteredNews = sameDayCategoryNews.stream()
+            boolean isMorning = newsDateTime.toLocalTime().isBefore(LocalTime.NOON);
+
+            List<News> filteredNews = new ArrayList<>(sameDayCategoryNews.stream()
                     .filter(n -> {
                         try {
                             LocalTime time = parsePublishedAt(n.getPublishedAt()).toLocalTime();
-                            boolean newsIsMorning = time.isBefore(LocalTime.NOON);
-                            return isMorning == newsIsMorning;
+                            // 기준 뉴스가 오전이면 오전 뉴스만, 오후면 오후 뉴스만 필터링
+                            return isMorning == time.isBefore(LocalTime.NOON);
                         } catch (Exception e) {
-                            // 날짜 파싱 실패 시 제외
                             return false;
                         }
                     })
-                    .collect(Collectors.toList());
+                    .toList());
 
-            if (filteredNews.size() >= count) {
-                Collections.shuffle(filteredNews);
-                return filteredNews.subList(0, count);
-            } else {
-                return filteredNews;
-            }
+            Collections.shuffle(filteredNews);
+            return filteredNews.stream().limit(count).toList();
+
         } catch (Exception e) {
-            // 날짜 파싱 실패 시 빈 리스트 반환
-            log.warn("날짜 파싱 실패로 인해 연관뉴스 조회를 건너뜁니다: {}", e.getMessage());
-            return new ArrayList<>();
+            log.warn("날짜 파싱 실패로 인해 '같은 시간대 뉴스' 조회를 건너뜁니다: {}", e.getMessage());
+            return Collections.emptyList();
         }
     }
-    
+
+    /**
+     * 최근 3일간 같은 카테고리의 뉴스를 조회하여 추가
+     */
+    private List<News> getRecentNewsByCategory(News news, List<News> excludeNews, int count) {
+        List<Long> excludeNewsIds = new ArrayList<>(excludeNews.stream().map(News::getNewsId).toList());
+        excludeNewsIds.add(news.getNewsId());
+
+        LocalDateTime now = LocalDateTime.now();
+        LocalDateTime threeDaysAgo = now.minusDays(3);
+
+        List<News> recentCategoryNews = newsRepository.findByCategoryNameAndPublishedAtBetweenAndNewsIdNotIn(
+                news.getCategoryName(),
+                threeDaysAgo.format(DB_DATETIME_FORMATTER),
+                now.format(DB_DATETIME_FORMATTER),
+                excludeNewsIds);
+
+        Collections.shuffle(recentCategoryNews);
+        return recentCategoryNews.stream().limit(count).toList();
+    }
+
+    /**
+     * 같은 카테고리의 뉴스를 조회하여 추가 (날짜 무관, 최종 보루)
+     */
+    private List<News> getAnyNewsByCategory(News news, List<News> excludeNews, int count) {
+        log.debug("최종 보루 로직 실행: 같은 카테고리 뉴스 조회 (날짜 무관)");
+        List<Long> excludeNewsIds = new ArrayList<>(excludeNews.stream().map(News::getNewsId).toList());
+        excludeNewsIds.add(news.getNewsId());
+
+        // Pageable을 사용하여 조회할 개수를 제한. 제외할 ID를 고려하여 넉넉하게 가져옴.
+        Pageable pageable = PageRequest.of(0, count + 20); // 필터링 후 개수를 보장하기 위해 조금 더 조회
+        Page<News> newsPage = newsRepository.findByCategoryNameAndNewsIdNotIn(news.getCategoryName(), excludeNewsIds, pageable);
+
+        List<News> availableNews = new ArrayList<>(newsPage.getContent());
+        Collections.shuffle(availableNews);
+
+        // 최종적으로 필요한 개수만큼만 잘라서 반환
+        return availableNews.stream().limit(count).toList();
+    }
+
     /**
      * 안전한 날짜 파싱 메서드
      */
     private LocalDateTime parsePublishedAt(String publishedAt) {
         if (publishedAt == null || publishedAt.trim().isEmpty()) {
-            return LocalDateTime.now();
+            throw new IllegalArgumentException("날짜 문자열(publishedAt)이 null이거나 비어있습니다.");
         }
-
-        try {
-            // MySQL의 DATETIME 형식 (2025-08-07 11:50:01.000000) 처리
-            if (publishedAt.contains(".")) {
-                // 마이크로초 부분 제거
-                String withoutMicroseconds = publishedAt.substring(0, publishedAt.lastIndexOf("."));
-                return LocalDateTime.parse(withoutMicroseconds, java.time.format.DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
-            } else {
-                // 일반적인 형식
-                return LocalDateTime.parse(publishedAt, java.time.format.DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
-            }
-        } catch (Exception e) {
-            log.warn("날짜 파싱 실패: {}, 기본값 사용", publishedAt);
-            return LocalDateTime.now();
+        // MySQL DATETIME 형식에서 밀리초(.) 이후 부분을 제거
+        String parsableDateTime = publishedAt;
+        int dotIndex = publishedAt.indexOf('.');
+        if (dotIndex != -1) {
+            parsableDateTime = publishedAt.substring(0, dotIndex);
         }
-    }
-    
-    /**
-     * 최근 3일간 같은 카테고리의 뉴스를 조회하여 추가
-     */
-    private List<News> getRecentNewsByCategory(News news, List<News> excludeNews, int count) {
-        // 이미 선택된 뉴스들의 ID 목록
-        List<Long> excludeNewsIds = excludeNews.stream()
-                .map(News::getNewsId)
-                .collect(Collectors.toList());
-        excludeNewsIds.add(news.getNewsId()); // 현재 뉴스도 제외
-
-        try {
-            // 최근 3일간의 같은 카테고리 뉴스 조회
-            LocalDateTime threeDaysAgo = LocalDateTime.now().minusDays(3);
-            LocalDateTime now = LocalDateTime.now();
-            
-            List<News> recentCategoryNews = newsRepository.findByPublishedAtBetweenAndCategoryNameAndNewsIdNotIn(
-                    threeDaysAgo.toString(), now.toString(), news.getCategoryName(), excludeNewsIds);
-
-            if (recentCategoryNews.size() >= count) {
-                Collections.shuffle(recentCategoryNews);
-                return recentCategoryNews.subList(0, count);
-            } else {
-                return recentCategoryNews;
-            }
-        } catch (Exception e) {
-            // 날짜 파싱 실패 시 빈 리스트 반환
-            log.warn("최근 뉴스 조회 중 오류 발생: {}", e.getMessage());
-            return new ArrayList<>();
-        }
+        return LocalDateTime.parse(parsableDateTime, DB_DATETIME_FORMATTER);
     }
 }
